Fix spacing issue on delete popup

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -103,7 +103,7 @@
       border-radius: 2%;
       padding: 20px;
       top: 40%;
-      left: 30%;
+      left: 33%;
       z-index:100;
       text-align: center;
 }
